<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_search">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/titlehome3"
            android:layout_width="284dp"
            android:layout_height="57dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="116dp"
            android:layout_marginEnd="92dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/searchtitel"
            android:textColor="@color/blue"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitlehome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="74dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/subtitelsearch"
            android:textColor="@color/blue"
            android:textSize="27sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlehome3" />

        <EditText
            android:id="@+id/edfrom2"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/custom_input"
            android:drawableLeft="@drawable/location"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/from"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitlehome2" />

        <EditText
            android:id="@+id/edto2"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/custom_input"
            android:drawableLeft="@drawable/location"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/to"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textColorHint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edfrom2" />

        <Button
            android:id="@+id/btnsearch2"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="41dp"
            android:background="@color/blue"
            android:fontFamily="sans-serif"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtdate" />

        <TextView
            android:id="@+id/txtdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="59dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="296dp"
            android:text="@string/date"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edto2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>