<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotpassword">
    <TextView
        android:id="@+id/titleforgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="63dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/forgotpassword"
        android:textColor="@color/blue"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/btncreate"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/button"
        android:drawablePadding="0dp"
        android:fontFamily="sans-serif"
        android:text="@string/btncreate"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edpass" />

    <EditText
        android:id="@+id/edname"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/account"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/not_admin"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt3" />

    <EditText
        android:id="@+id/edemail"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="31dp"

        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/email"
        android:focusable="true"
        android:fontFamily="sans-serif"
        android:hint="@string/hintemail"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edname" />

    <EditText
        android:id="@+id/edpass"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/lock"
        android:focusable="true"
        android:fontFamily="sans-serif"
        android:hint="@string/newpassword"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:singleLine="false"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcreate" />

    <TextView
        android:id="@+id/txtsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="124dp"
        android:drawableLeft="@drawable/back"
        android:fontFamily="sans-serif"
        android:text="@string/title2"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncreate" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="269dp"
        android:layout_height="297dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/forgot" />

    <TextView
        android:id="@+id/txtcreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="239dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/newpassword"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edemail" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="99dp"
        android:text="@string/txtforgotpassword"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleforgot" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginEnd="129dp"
        android:text="@string/txt2"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2" />

</androidx.constraintlayout.widget.ConstraintLayout>